@@ -6,7 +6,7 @@ requires 'Cwd'              => '3.00';
 requires 'File::Basename'   => '1.00015';
 requires 'File::Next'       => '1.18';
 requires 'File::Spec'       => '3.00';
-requires 'Getopt::Long'     => '2.39';
+requires 'Getopt::Long'     => '2.38';
 requires 'if'               => 0;
 requires 'List::Util'       => 0;
 requires 'parent'           => 0;
